# sql-agent-cli

./: .gitignore  README.md  pyproject.toml  spec.md  sql_agent.py
.github/workflows/: publish.yml
src/sql_agent/: cli.py  config.py  models.py  render.py  validation.py
src/sql_agent/engines/: __init__.py  base.py  mysql.py  postgres.py  sqlite.py
tests/: _bootstrap.py  test_config.py  test_sqlite_cli.py  test_validation.py
