[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sql-agent"
version = "0.9.0"
description = "Read-only SQL CLI for agentic workflows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
  { name = "Paul" },
]
keywords = ["sql", "mysql", "postgresql", "sqlite", "cli", "agent"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]
dependencies = [
  "PyMySQL[rsa]>=1.1.0",
  "psycopg[binary]>=3.2.0",
  "sqlglot>=26.0.0",
]

[project.urls]
Homepage = "https://github.com/pseudosavant/sql-agent"
Repository = "https://github.com/pseudosavant/sql-agent"
Issues = "https://github.com/pseudosavant/sql-agent/issues"

[project.scripts]
sql-agent = "sql_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sql_agent"]
